# The-Establishment

./: .env.example  .gitignore  .gitleaks.toml  .npmrc  Anchor.toml  Cargo.toml  LICENSE  README.md  SECURITY_AUDIT_SUMMARY.md  package-lock.json  package.json  railway-crank.toml  railway-docs.toml  railway.toml  tsconfig.json
.audit/: ARCHITECTURE.md  COVERAGE.md  FINAL_REPORT.md  HANDOVER.md  HOT_SPOTS.md  INDEX.md  KB_MANIFEST.md  PROGRESS.md  STATE.json  STRATEGIES.md
.audit-history/2026-02-22-be95eba/: ARCHITECTURE.md  COVERAGE.md  FINAL_REPORT.md  (+6 more)
.bok/: INDEX.md  STATE.json  run-bc-kani.sh  run-kani-individual.sh
.bulwark/: ARCHITECTURE.md  COVERAGE.md  FINAL_REPORT.md  HANDOVER.md  HOT_SPOTS.md  INDEX.md  KB_MANIFEST.md  STATE.json  STRATEGIES.md  VERIFICATION_REPORT.md
.claude/: settings.json  svk-meta.json
.planning/: AUDIT-COMPLETION-REPORT.md  MILESTONES.md  PROJECT.md  REQUIREMENTS.md  RETROSPECTIVE.md  ROADMAP.md  STATE.md
Docs/: Bonding_Curve_Spec.md  Compute_Budget_Profile.md  DOC_MANIFEST.md  E2E_Devnet_Test_Report.md  FutureFutarchy.md  PROJECT_BRIEF.md  SECURITY_TESTS.md  SFK.md  VULNHUNTER-AUDIT-2026-03-05.md  account-layout-reference.md  address-placeholders.md  architecture.md  branding-guide.md  carnage-spec.md  cpi-interface-contract.md  crank-rpc-audit.md  data-model.md  dbs-env-var-manifest.md  deployment-sequence.md  e2e-test-report.md  edge-case-audit.md  epoch-spec.md  error-handling-playbook.md  external-arb-bot-spec.md  fix-plan-tax-amm-crossref.md  frontend-spec.md  liquidity-slippage-analysis.md  mainnet-deploy-checklist.md  mainnet-governance.md  mainnet-readiness-assessment.md  mainnet-verified-build-report.md  operational-runbook.md  oracle-failure-playbook.md  pathway1-report.md  pathway2-report.md  profit-locked-unlocked.md  project-overview.md  protocol-arb-spec.md  public-push-checklist.md  security-model.md  (+10 more)
app/: drizzle.config.ts  instrumentation-client.ts  instrumentation.ts  middleware.ts  next.config.ts  package.json
contracts/: .env.example  AMM.sol  ConversionVault.sol  EpochManager.sol  TaxController.sol  VRFConsumer.sol  VotesStaking.sol  foundry.toml
deployments/: devnet.json  expected-hashes.devnet.json  expected-hashes.mainnet.json  mainnet.json
docs-site/: next.config.mjs  package-lock.json  package.json  railway.toml  tsconfig.json
programs/bonding_curve/: Cargo.toml
programs/bonding_curve/proptest-regressions/: math.txt
programs/bonding_curve/src/: constants.rs  error.rs  events.rs  lib.rs  math.rs  state.rs
programs/bonding_curve/src/instructions/: burn_bc_admin.rs  claim_refund.rs  close_token_vault.rs  consolidate_for_refund.rs  distribute_tax_escrow.rs  fund_curve.rs  initialize_bc_admin.rs  initialize_curve.rs  mark_failed.rs  mod.rs  prepare_transition.rs  purchase.rs  sell.rs  start_curve.rs  transfer_bc_admin.rs  withdraw_graduated_sol.rs
programs/bonding_curve/tests/: bok_kani.rs  bok_litesvm.rs  bok_proptest.proptest-regressions  bok_proptest.rs  boundary_test.rs  dual_curve_test.rs  edge_case_test.rs  refund_clock_test.rs
programs/conversion-vault/: Cargo.toml
programs/conversion-vault/src/: constants.rs  error.rs  lib.rs  state.rs
programs/conversion-vault/src/helpers/: hook_helper.rs  mod.rs
programs/conversion-vault/src/instructions/: convert.rs  convert_v2.rs  initialize.rs  mod.rs
programs/conversion-vault/tests/: bok_proptest_vault.rs  test_edge_cases.rs  test_vault.rs
programs/epoch-program/: Cargo.toml
programs/epoch-program/src/: constants.rs  errors.rs  events.rs  lib.rs
programs/epoch-program/src/helpers/: carnage.rs  carnage_execution.rs  mod.rs  tax_derivation.rs
programs/epoch-program/src/instructions/: consume_randomness.rs  execute_carnage.rs  execute_carnage_atomic.rs  expire_carnage.rs  force_carnage.rs  initialize_carnage_fund.rs  initialize_epoch_state.rs  mod.rs  retry_epoch_vrf.rs  trigger_epoch_transition.rs
programs/epoch-program/src/state/: carnage_fund_state.rs  enums.rs  epoch_state.rs  mod.rs
programs/epoch-program/tests/: bok_proptest_carnage.rs  bok_proptest_vrf.rs  test_edge_cases.rs  test_partition_hook_accounts.rs
programs/fake-tax-program/: Cargo.toml
programs/fake-tax-program/src/: lib.rs
programs/mock-tax-program/: Cargo.toml
programs/mock-tax-program/src/: lib.rs
programs/stub-staking/: Cargo.toml
programs/stub-staking/src/: errors.rs  lib.rs  state.rs
programs/tax-program/: Cargo.toml
programs/tax-program/src/: constants.rs  errors.rs  events.rs  lib.rs
programs/tax-program/src/helpers/: mod.rs  pool_reader.rs  tax_math.rs
programs/tax-program/src/instructions/: initialize_wsol_intermediary.rs  mod.rs  swap_exempt.rs  swap_sol_buy.rs  swap_sol_sell.rs
programs/tax-program/src/state/: epoch_state_reader.rs  mod.rs
programs/tax-program/tests/: bok_constants.rs  bok_kani.rs  bok_proptest.rs  test_carnage_signer_pda.rs  test_edge_cases.rs  test_swap_exempt.rs  test_swap_sol_buy.rs  test_swap_sol_sell.rs
programs/transfer-hook/: Cargo.toml
programs/transfer-hook/src/: errors.rs  events.rs  lib.rs
programs/transfer-hook/src/instructions/: add_whitelist_entry.rs  burn_authority.rs  initialize_authority.rs  initialize_extra_account_meta_list.rs  mod.rs  transfer_authority.rs  transfer_hook.rs
programs/transfer-hook/src/state/: mod.rs  whitelist_authority.rs  whitelist_entry.rs
programs/transfer-hook/tests/: test_edge_cases.rs  test_transfer_hook.rs
scripts/: backfill-candles.ts  fix-carnage-burned-columns.sql  init-localnet.ts  optimize-images.mjs  prepare-carnage-state.ts  run-integration-tests.sh  verify-program-ids.ts  webhook-manage.ts
sdk/jupiter-adapter/: Cargo.toml  README.md
sdk/jupiter-adapter/src/: constants.rs
sdk/jupiter-adapter/tests/: test_construction.rs  test_edge_gauntlet.rs  test_instruction_structure.rs  test_mainnet_validation.rs  test_quoting_extended.rs
shared/: constants-evm.ts  constants.ts  index.ts  package.json  programs.ts  tsconfig.json
tests/: cross-program-integration.ts  devnet-vrf.ts  security-account-validation.ts  security.ts  staking.ts  token-flow.ts
(+3341 files in other folders)
