[package]
name = "conversion-vault"
version = "0.1.0"
description = "Dr Fraudsworth Conversion Vault - Fixed-rate 100:1 token conversions"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
anchor-lang = { version = "0.32.1", features = ["init-if-needed"] }
anchor-spl = { version = "0.32.1", features = ["token_2022"] }
solana-security-txt = "1.1.1"

[dev-dependencies]
proptest = "1.9"

[features]
default = []
devnet = []
localnet = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]
