[package]
name = "mock-tax-program"
version = "0.1.0"
description = "Mock Tax Program for testing AMM CPI access control"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
anchor-lang = { version = "0.32.1" }
solana-program = "2.2"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]
