[package]
name = "tax-program"
version = "0.1.0"
description = "Dr Fraudsworth Tax Program - Asymmetric taxation and atomic distribution"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
anchor-lang = { version = "0.32.1", features = ["init-if-needed"] }
anchor-spl = { version = "0.32.1", features = ["token", "token_2022", "associated_token"] }
solana-security-txt = "1.1.1"

# AMM dependency for PoolState type and CPI
[dependencies.amm]
path = "../amm"
features = ["cpi"]

[dev-dependencies]
proptest = "1.9"
litesvm = "0.9.1"
solana-sdk = "2.2"
solana-program = "2.2"
spl-token = "8.0"
spl-token-2022 = "8.0"
spl-associated-token-account = "7.0"
# Modular Solana 3.x crates needed for litesvm type compatibility
solana-address = "2.0"
solana-keypair = "~3.1"
solana-signer = "~3.0"
solana-message = "~3.0"
solana-transaction = { version = "~3.0", features = ["verify"] }
solana-account = "3.3"
solana-instruction = "~3.1"
sha2 = "0.10"

[features]
default = []
devnet = []
localnet = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]
