[package]
name = "transfer-hook"
version = "0.1.0"
description = "Transfer Hook program for whitelist-based transfer validation"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "transfer_hook"

[features]
default = []
no-entrypoint = []
cpi = ["no-entrypoint"]
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = { version = "0.32.1" }
anchor-spl = { version = "0.32.1", features = ["token_2022"] }
solana-security-txt = "1.1.1"
spl-discriminator = "0.4.1"
spl-token-2022 = "8.0.1"
spl-transfer-hook-interface = "0.10.0"
spl-tlv-account-resolution = "0.10.0"

[dev-dependencies]
litesvm = "0.9.1"
solana-account = "3.3"
solana-address = "2.0"
solana-keypair = "~3.1"
solana-signer = "~3.0"
solana-message = "~3.0"
solana-transaction = { version = "~3.0", features = ["verify"] }
solana-instruction = "~3.1"
solana-sdk = "2.2"
sha2 = "0.10"
